# rk-solvers

./: .gitignore  CMakeLists.txt  README.md  combustion_test.py  experiment.ipynb  integrator.ipynb  one_d_combustion.py  run_script.sh  setup.py
include/: dense_output.hpp  rk23.hpp  rk45.hpp  rk_solver.hpp  rk_step.hpp  solve_ivp.hpp
mechanism_files/: ch4_53species.yaml
src/: dense_output.cpp  rk23.cpp  rk45.cpp  rk_solver.cpp  rk_solver_binding.cpp  rk_step.cpp  solve_ivp.cpp
tests/: benchmark.py  benchmark2.py  benchmark3.py  benchmark4.py  combustion.py  test_rk_solver.py
